Scale the data using StandardScaler

--- a/10_Instructor_Lab_Lannen.ipynb
+++ b/10_Instructor_Lab_Lannen.ipynb
@@ -449,7 +449,7 @@
    "id": "4d83bb3d-7b16-49d2-aab1-cbecb055a305",
    "metadata": {},
    "source": [
-    "## Using the numerical columns for the hospital (7 total; not variables related to position), conduct a PCA and obtain the eigenvalues."
+    "## Select 7 numerical hospital values and create new dataframe."
    ]
   },
   {
@@ -645,9 +645,222 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c1e2ce7f-caf7-40ad-9681-8e40a876a0d3",
+   "metadata": {},
+   "source": [
+    "## Scale the data using StandardScaler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "1b3c4d07-be0b-4ee4-a1d5-10e1c7c8f344",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-5.09437453e-01, -4.90650630e-01, -5.19671633e-01,\n",
+       "        -4.05713715e-01, -4.89551239e-01, -7.54073702e-02,\n",
+       "        -8.15994441e-01],\n",
+       "       [-5.00476059e-01, -4.90065895e-01, -4.73589791e-01,\n",
+       "        -5.12702954e-01, -4.81441776e-01, -4.07355392e-03,\n",
+       "        -4.34188623e-01],\n",
+       "       [-3.72925552e-01, -4.34081799e-01, -4.60016965e-01,\n",
+       "        -3.84296016e-01, -4.34982578e-01, -2.81523611e-02,\n",
+       "        -3.97826164e-01],\n",
+       "       [-4.73094022e-01, -4.87297182e-01, -5.09466457e-01,\n",
+       "        -4.81028683e-01, -4.86814197e-01,  4.50388531e-02,\n",
+       "        -6.34182146e-01],\n",
+       "       [-5.41798042e-01, -5.07851121e-01, -5.44056290e-01,\n",
+       "        -5.50809744e-01, -5.06368049e-01,  1.99511793e-01,\n",
+       "        -6.93271142e-01],\n",
+       "       [-4.74338660e-01, -4.01551327e-01, -4.62053940e-01,\n",
+       "        -3.92324734e-01, -4.04436452e-01,  1.76754035e-01,\n",
+       "        -5.84183765e-01],\n",
+       "       [-4.21566007e-01, -4.18075813e-01, -4.76222323e-01,\n",
+       "        -3.42144025e-01, -4.20577947e-01,  4.05795366e-02,\n",
+       "        -5.88729073e-01],\n",
+       "       [-5.93574985e-01, -5.86871077e-01, -5.72404622e-01,\n",
+       "        -5.83363729e-01, -5.79676340e-01, -6.14311318e-02,\n",
+       "        -7.25088294e-01],\n",
+       "       [-5.88596432e-01, -5.67632968e-01, -5.60679462e-01,\n",
+       "        -5.85750159e-01, -5.61885130e-01,  2.48569215e-03,\n",
+       "        -6.65999298e-01],\n",
+       "       [-6.68441636e-02, -1.18154178e-01, -1.46695714e-01,\n",
+       "        -1.71537813e-01, -1.33810733e-01,  1.14146069e-01,\n",
+       "        -3.87468824e-02],\n",
+       "       [-5.28853806e-01, -3.07221115e-01, -4.01773891e-01,\n",
+       "        -1.69858878e-01, -3.08361075e-01,  8.22938504e-02,\n",
+       "        -3.43282475e-01],\n",
+       "       [-2.98844695e-01, -3.07221115e-01, -4.01773891e-01,\n",
+       "        -1.69858878e-01, -3.08361075e-01,  8.22938504e-02,\n",
+       "        -3.43282475e-01],\n",
+       "       [-5.55240133e-01, -5.18536607e-01, -5.39130581e-01,\n",
+       "        -4.90747360e-01, -5.14820694e-01,  1.45763883e-02,\n",
+       "        -6.65999298e-01],\n",
+       "       [-5.47772305e-01, -5.15784127e-01, -5.39865902e-01,\n",
+       "        -4.88649859e-01, -5.12785612e-01,  2.55465264e-02,\n",
+       "        -7.70541367e-01],\n",
+       "       [-5.64948310e-01, -5.01711880e-01, -5.14394324e-01,\n",
+       "        -4.97562957e-01, -4.99431977e-01,  2.12936061e-02,\n",
+       "        -6.11455610e-01],\n",
+       "       [-4.96493217e-01, -4.56008495e-01, -4.90704282e-01,\n",
+       "        -3.71157104e-01, -4.55075642e-01, -5.14259336e-02,\n",
+       "        -7.70541367e-01],\n",
+       "       [-2.85402604e-01, -2.81544906e-01, -4.01361603e-01,\n",
+       "        -1.43772355e-01, -2.89939611e-01,  1.40031947e-01,\n",
+       "        -3.34191861e-01],\n",
+       "       [-4.85878944e-01, -4.22823264e-01, -4.68830582e-01,\n",
+       "        -3.08450957e-01, -4.11016986e-01,  3.50142427e-03,\n",
+       "        -6.02364995e-01],\n",
+       "       [-6.34896968e-01, -5.84291804e-01, -5.84615584e-01,\n",
+       "        -6.34331276e-01, -5.78850325e-01,  8.95442882e-02,\n",
+       "        -7.70541367e-01],\n",
+       "       [-5.92579274e-01, -5.54710419e-01, -5.38148827e-01,\n",
+       "        -6.04007905e-01, -5.50689966e-01,  1.49673505e-02,\n",
+       "        -2.88738787e-01],\n",
+       "       [-5.13918150e-01, -4.66557392e-01, -4.83576374e-01,\n",
+       "        -4.39781108e-01, -4.66452501e-01, -1.54946493e-02,\n",
+       "        -6.93271142e-01],\n",
+       "       [-4.91514665e-01, -4.56769766e-01, -5.11621101e-01,\n",
+       "        -3.78785757e-01, -4.57606017e-01,  3.08581633e-02,\n",
+       "        -6.16000917e-01],\n",
+       "       [-5.76150052e-01, -5.20353351e-01, -5.42031736e-01,\n",
+       "        -5.28788961e-01, -5.17966545e-01,  8.03562334e-02,\n",
+       "        -7.25088294e-01],\n",
+       "       [-5.54493350e-01, -5.08023851e-01, -5.29177181e-01,\n",
+       "        -4.95425229e-01, -5.05189043e-01,  4.14244579e-02,\n",
+       "        -7.65996060e-01],\n",
+       "       [-5.59720830e-01, -5.28781154e-01, -5.31162303e-01,\n",
+       "        -5.56449560e-01, -5.25112574e-01,  4.80241940e-02,\n",
+       "        -7.70541367e-01],\n",
+       "       [-4.93506086e-01, -3.93985788e-01, -4.02975547e-01,\n",
+       "        -4.93800879e-01, -3.98061445e-01,  1.75835377e-01,\n",
+       "        -5.02368233e-01],\n",
+       "       [-2.84406894e-01, -2.77490565e-01, -3.49574618e-01,\n",
+       "        -1.48276054e-01, -2.77518246e-01,  1.77653632e-02,\n",
+       "        -1.93287333e-01],\n",
+       "       [-4.22810645e-01, -5.15051449e-01, -5.10835218e-01,\n",
+       "        -5.53986306e-01, -5.12336897e-01,  3.88417484e-02,\n",
+       "        -2.20559177e-01],\n",
+       "       [-4.11111047e-01, -3.43602424e-01, -3.90707115e-01,\n",
+       "        -2.92993485e-01, -3.47638787e-01,  4.15237734e-02,\n",
+       "        -3.34191861e-01],\n",
+       "       [-6.38879810e-01, -5.88720209e-01, -5.86499169e-01,\n",
+       "        -6.01668388e-01, -5.82513957e-01,  1.25487574e-02,\n",
+       "        -7.93267904e-01],\n",
+       "       [-6.22450587e-01, -5.87857651e-01, -5.85444081e-01,\n",
+       "        -5.92366027e-01, -5.79711912e-01,  7.17229133e-03,\n",
+       "        -8.15994441e-01],\n",
+       "       [-5.77145762e-01, -5.58362913e-01, -5.44310215e-01,\n",
+       "        -5.57410097e-01, -5.54057059e-01, -7.00984956e-02,\n",
+       "        -7.56905445e-01],\n",
+       "       [-4.47454478e-01, -4.81267491e-01, -4.79312044e-01,\n",
+       "        -5.06560640e-01, -4.80807607e-01,  1.05245935e-02,\n",
+       "        -7.05640339e-02],\n",
+       "       [-5.43291608e-01, -6.02005162e-01, -5.70799678e-01,\n",
+       "        -6.31441781e-01, -5.95438130e-01, -6.91432942e-02,\n",
+       "        -5.34185385e-01],\n",
+       "       [-2.24166413e-01, -2.43257352e-01, -3.01954690e-01,\n",
+       "        -1.07710530e-01, -2.53975865e-01, -1.08455138e-01,\n",
+       "        -4.20552701e-01],\n",
+       "       [-5.87600722e-01, -5.77948047e-01, -5.62492718e-01,\n",
+       "        -6.04213313e-01, -5.71735217e-01, -1.34284874e-02,\n",
+       "        -6.79635220e-01],\n",
+       "       [-4.21814934e-01, -4.89033244e-01, -5.23336360e-01,\n",
+       "        -4.42944384e-01, -4.87222577e-01,  2.43538388e-02,\n",
+       "        -2.02377947e-01],\n",
+       "       [-6.11995628e-01, -5.99015783e-01, -5.82544028e-01,\n",
+       "        -6.28520680e-01, -5.92177723e-01, -8.96061617e-03,\n",
+       "        -7.15997679e-01],\n",
+       "       [-5.63205816e-01, -5.66477810e-01, -5.64059956e-01,\n",
+       "        -5.66702222e-01, -5.61793906e-01, -2.01624903e-02,\n",
+       "        -5.38730692e-01],\n",
+       "       [-5.87600722e-01, -5.91028878e-01, -5.76071960e-01,\n",
+       "        -5.98401740e-01, -5.84719831e-01, -4.80376231e-02,\n",
+       "        -4.88732311e-01],\n",
+       "       [-5.97557826e-01, -5.55659806e-01, -5.53758466e-01,\n",
+       "        -5.57423073e-01, -5.51095223e-01, -1.51346360e-02,\n",
+       "        -7.11452371e-01],\n",
+       "       [-6.44854072e-01, -6.02134525e-01, -5.87727502e-01,\n",
+       "        -6.32846433e-01, -5.95600467e-01, -5.03115697e-04,\n",
+       "        -8.29630363e-01],\n",
+       "       [-5.93077129e-01, -5.62118791e-01, -5.56725660e-01,\n",
+       "        -5.78485084e-01, -5.57382515e-01, -3.37181214e-04,\n",
+       "        -4.34188623e-01],\n",
+       "       [-5.82622170e-01, -5.60487102e-01, -5.50221894e-01,\n",
+       "        -5.86306163e-01, -5.54657438e-01,  5.15150980e-03,\n",
+       "        -4.16007393e-01],\n",
+       "       [ 8.96505684e-01,  7.41126478e-01,  7.64143308e-01,\n",
+       "         2.02014297e-01,  7.01881785e-01,  7.61267876e-01,\n",
+       "         7.65772520e-01],\n",
+       "       [-2.38355286e-01, -1.52220178e-01, -1.13356617e-01,\n",
+       "        -2.50463161e-01, -1.49302028e-01,  4.18021301e-02,\n",
+       "         1.79427871e-01],\n",
+       "       [ 2.68978018e+00,  1.28660243e+00,  2.35698717e+00,\n",
+       "         1.35137107e+00,  1.24330013e+00, -4.52406100e+00,\n",
+       "         2.36572071e+00],\n",
+       "       [ 5.99286119e-01,  4.97586151e-02,  3.00197821e-01,\n",
+       "         3.68228183e-01,  3.44907147e-02, -1.68829182e+00,\n",
+       "         7.20319447e-01],\n",
+       "       [ 2.48796045e-01, -1.55192461e-01,  2.66506411e-02,\n",
+       "         2.13618389e-02, -1.67226011e-01, -1.13967833e+00,\n",
+       "         7.48858016e-02],\n",
+       "       [ 5.24109981e-01,  2.75001802e-01,  3.78059780e-01,\n",
+       "         1.13413421e-01,  3.02163606e-01,  8.29402677e-02,\n",
+       "         8.11225594e-01],\n",
+       "       [ 1.97336652e+00,  9.15070403e-01,  1.34557710e+00,\n",
+       "         2.23804882e+00,  8.73733476e-01, -4.42311445e+00,\n",
+       "         1.49302170e+00],\n",
+       "       [-4.48201261e-01,  3.22900337e-01,  4.86766881e-01,\n",
+       "         3.83132868e-01,  4.92590517e-01,  2.66851963e-01,\n",
+       "         1.17485018e+00],\n",
+       "       [ 1.07025716e+00,  9.56194840e-01,  8.86843406e-01,\n",
+       "         8.65399770e-01,  9.17628006e-01,  2.84849893e-01,\n",
+       "         1.87028221e+00],\n",
+       "       [ 2.57626919e+00,  2.05026382e+00,  2.00036037e+00,\n",
+       "         1.45356944e+00,  1.92858843e+00,  7.60144076e-01,\n",
+       "         1.67483399e+00],\n",
+       "       [ 1.26541640e+00,  1.61614994e+00,  1.05777458e+00,\n",
+       "         1.77710027e+00,  1.62480714e+00,  2.06047465e+00,\n",
+       "         1.51120293e+00],\n",
+       "       [ 2.34576222e+00,  3.21494707e+00,  2.91032465e+00,\n",
+       "         3.14448205e+00,  3.06807193e+00,  6.87350913e-01,\n",
+       "         2.10663819e+00],\n",
+       "       [ 7.28728475e-01,  5.98493587e-01,  7.58868577e-01,\n",
+       "         1.19507327e-01,  5.58143762e-01,  8.66179982e-02,\n",
+       "         1.52483885e+00],\n",
+       "       [ 1.92557242e+00,  4.75377000e-01,  4.45616083e-01,\n",
+       "         1.40794409e-01,  4.33729683e-01,  5.44895835e-01,\n",
+       "         1.21575795e+00],\n",
+       "       [ 2.51005445e+00,  3.36648465e+00,  2.71942990e+00,\n",
+       "         4.20093270e+00,  3.30761782e+00,  8.37555472e-01,\n",
+       "         1.13848772e+00],\n",
+       "       [ 1.06957093e-01,  1.89870099e+00,  1.66697434e+00,\n",
+       "         1.51191984e+00,  1.94070809e+00,  2.03790978e+00,\n",
+       "         2.43390032e+00],\n",
+       "       [ 3.31060564e+00,  3.66841691e+00,  3.99115829e+00,\n",
+       "         2.72854385e+00,  3.92872184e+00,  2.32578532e+00,\n",
+       "         3.24751034e+00]])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scaler = StandardScaler()\n",
+    "hospital_scaled = scaler.fit_transform(hospital_df)\n",
+    "hospital_scaled"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c6c4be7-cd44-4cf3-a36d-69ebaffba7e6",
+   "id": "783a6d48-af1d-424f-9bcb-8d703422dd0e",
    "metadata": {},
    "outputs": [],
    "source": []
