Extract Eigen Values

--- a/10_Instructor_Lab_Lannen.ipynb
+++ b/10_Instructor_Lab_Lannen.ipynb
@@ -858,11 +858,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "783a6d48-af1d-424f-9bcb-8d703422dd0e",
+   "cell_type": "markdown",
+   "id": "c01b5e06-9908-4e1b-b067-a1f5a6422b87",
    "metadata": {},
-   "outputs": [],
    "source": [
     "## Run Principal Component Analysis"
    ]
@@ -1297,9 +1295,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8aeac25b-988b-4247-a7f4-1c3ae6879148",
+   "metadata": {},
+   "source": [
+    "## Extract Eigen Values"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a314bdf-519b-4e09-8d88-d04461103e77",
+   "id": "119cd55e-e210-48f0-b0cd-7d620b450609",
    "metadata": {},
    "outputs": [],
    "source": []
