Convert values to decimal

--- a/10_Instructor_Lab_Lannen.ipynb
+++ b/10_Instructor_Lab_Lannen.ipynb
@@ -1304,8 +1304,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "119cd55e-e210-48f0-b0cd-7d620b450609",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5.72134563e+00 1.07657967e+00 1.91383827e-01 9.31699632e-02\n",
+      " 3.29143500e-02 1.27322677e-03 5.91419821e-22]\n"
+     ]
+    }
+   ],
+   "source": [
+    "eigenvalues = pca.explained_variance_\n",
+    "print(eigenvalues)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "da847e97-a791-4505-a69f-06a3d1262992",
+   "metadata": {},
+   "source": [
+    "## Based on the eigenvalues, explain how many variables you should keep"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c0211552-7f9c-4cd6-80d5-f283649f5343",
    "metadata": {},
    "outputs": [],
    "source": []
