Based on the eigenvalues, explain why i am keeping the first two variables

--- a/10_Instructor_Lab_Lannen.ipynb
+++ b/10_Instructor_Lab_Lannen.ipynb
@@ -1324,6 +1324,45 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c72c0753-7fc3-411a-b3fb-950cc75f7987",
+   "metadata": {},
+   "source": [
+    "## Convert values to decimal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "c7ed8edd-2db2-4ec6-aa0b-1ce7a83d51dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.72134563000000007094\n",
+      "1.07657967000000009961\n",
+      "0.19138382700000000636\n",
+      "0.09316996319999999721\n",
+      "0.03291435000000000194\n",
+      "0.00127322677000000009\n",
+      "0.00000000000000000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "values = [5.72134563e+00, 1.07657967e+00, 1.91383827e-01, 9.31699632e-02,\n",
+    "          3.29143500e-02, 1.27322677e-03, 5.91419821e-22]\n",
+    "\n",
+    "\n",
+    "decimal_values = [f\"{v:.20f}\" for v in values]\n",
+    "\n",
+    "for d in decimal_values:\n",
+    "    print(d)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "da847e97-a791-4505-a69f-06a3d1262992",
    "metadata": {},
    "source": [
@@ -1331,12 +1370,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c0211552-7f9c-4cd6-80d5-f283649f5343",
+   "cell_type": "markdown",
+   "id": "22be78e8-784a-4520-8681-b0b4196132ff",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "To quote the tutorial: 'A component with an eigenvalue greater than or equal to 1.0 is considered influential.'  \n",
+    "\n",
+    "This means we should keep the first two values: NoFTE and NetPatRev."
+   ]
   }
  ],
  "metadata": {
