add decimal to evaluation

--- a/10_Instructor_Lab_Lannen.ipynb
+++ b/10_Instructor_Lab_Lannen.ipynb
@@ -1376,7 +1376,7 @@
    "source": [
     "To quote the tutorial: 'A component with an eigenvalue greater than or equal to 1.0 is considered influential.'  \n",
     "\n",
-    "This means we should keep the first two values: NoFTE and NetPatRev."
+    "This means we should keep the first two values: NoFTE(5.72134563000000007094) and NetPatRev(1.07657967000000009961)."
    ]
   }
  ],
