add scree plot analysis

--- a/10_Instructor_Lab_Lannen.ipynb
+++ b/10_Instructor_Lab_Lannen.ipynb
@@ -1411,20 +1411,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "983a812b-32d6-42ec-9ac4-3c58b90db52f",
+   "cell_type": "markdown",
+   "id": "c5becd3a-39e5-4335-98a1-b39800fe66de",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Analysis\n",
+    "Based on the scree plot I should keep the first 2 components as they have the hightest rate of variance. The plot shows the 'elbow' after the second component, which means there is a diminishing return on information beyond that point."
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5ceb55bf-a05b-4deb-a4b1-790154298755",
+   "cell_type": "markdown",
+   "id": "ff01f73f-9522-4292-9a26-fd0e8f26800b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "\n"
+   ]
   }
  ],
  "metadata": {
