choose k value, justify choice and run analysis

--- a/10_Instructor_Lab_Lannen.ipynb
+++ b/10_Instructor_Lab_Lannen.ipynb
@@ -1424,8 +1424,242 @@
    "id": "ff01f73f-9522-4292-9a26-fd0e8f26800b",
    "metadata": {},
    "source": [
-    "\n"
+    "## Value of 'k' and analysia"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cc52f8c4-a40f-4bcb-8879-4ceecdd08a17",
+   "metadata": {},
+   "source": [
+    "I chose 3 as a value for 'k' because of the column types of Teaching, Type Control and Donor Type"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "e9f770f0-20e1-486b-bb46-797ce0379e39",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/t7/k69bkrds49jgjyp3lf6scvzr0000gp/T/ipykernel_4532/1151409601.py:3: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  hospital_df['Cluster'] = kmeans.fit_predict(hospital_scaled)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>NoFTE</th>\n",
+       "      <th>NetPatRev</th>\n",
+       "      <th>InOperExp</th>\n",
+       "      <th>OutOperExp</th>\n",
+       "      <th>OperRev</th>\n",
+       "      <th>OperInc</th>\n",
+       "      <th>AvlBeds</th>\n",
+       "      <th>Cluster</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>327.0</td>\n",
+       "      <td>1.355202e+05</td>\n",
+       "      <td>2.052343e+07</td>\n",
+       "      <td>3.491622e+07</td>\n",
+       "      <td>49933713</td>\n",
+       "      <td>-5505933</td>\n",
+       "      <td>15</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>345.0</td>\n",
+       "      <td>1.361567e+05</td>\n",
+       "      <td>3.344754e+07</td>\n",
+       "      <td>2.034860e+07</td>\n",
+       "      <td>53351748</td>\n",
+       "      <td>-444391</td>\n",
+       "      <td>99</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>601.2</td>\n",
+       "      <td>1.970943e+05</td>\n",
+       "      <td>3.725418e+07</td>\n",
+       "      <td>3.783245e+07</td>\n",
+       "      <td>72933707</td>\n",
+       "      <td>-2152920</td>\n",
+       "      <td>107</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>400.0</td>\n",
+       "      <td>1.391704e+05</td>\n",
+       "      <td>2.338557e+07</td>\n",
+       "      <td>2.466136e+07</td>\n",
+       "      <td>51087341</td>\n",
+       "      <td>3040415</td>\n",
+       "      <td>55</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>262.0</td>\n",
+       "      <td>1.167978e+05</td>\n",
+       "      <td>1.368450e+07</td>\n",
+       "      <td>1.515999e+07</td>\n",
+       "      <td>42845642</td>\n",
+       "      <td>14001153</td>\n",
+       "      <td>42</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>56</th>\n",
+       "      <td>2814.0</td>\n",
+       "      <td>1.321032e+06</td>\n",
+       "      <td>3.791029e+08</td>\n",
+       "      <td>1.064302e+08</td>\n",
+       "      <td>491523782</td>\n",
+       "      <td>5990693</td>\n",
+       "      <td>530</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>57</th>\n",
+       "      <td>5218.0</td>\n",
+       "      <td>1.187022e+06</td>\n",
+       "      <td>2.912481e+08</td>\n",
+       "      <td>1.093286e+08</td>\n",
+       "      <td>439084836</td>\n",
+       "      <td>38508125</td>\n",
+       "      <td>462</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>58</th>\n",
+       "      <td>6392.0</td>\n",
+       "      <td>4.333934e+06</td>\n",
+       "      <td>9.289621e+08</td>\n",
+       "      <td>6.621559e+08</td>\n",
+       "      <td>1650391999</td>\n",
+       "      <td>59273999</td>\n",
+       "      <td>445</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>59</th>\n",
+       "      <td>1565.1</td>\n",
+       "      <td>2.736281e+06</td>\n",
+       "      <td>6.337903e+08</td>\n",
+       "      <td>2.960207e+08</td>\n",
+       "      <td>1074256998</td>\n",
+       "      <td>144445998</td>\n",
+       "      <td>730</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>60</th>\n",
+       "      <td>8000.0</td>\n",
+       "      <td>4.662582e+06</td>\n",
+       "      <td>1.285631e+09</td>\n",
+       "      <td>4.616758e+08</td>\n",
+       "      <td>1912179417</td>\n",
+       "      <td>164872413</td>\n",
+       "      <td>909</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>61 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     NoFTE     NetPatRev     InOperExp    OutOperExp     OperRev    OperInc  \\\n",
+       "0    327.0  1.355202e+05  2.052343e+07  3.491622e+07    49933713   -5505933   \n",
+       "1    345.0  1.361567e+05  3.344754e+07  2.034860e+07    53351748    -444391   \n",
+       "2    601.2  1.970943e+05  3.725418e+07  3.783245e+07    72933707   -2152920   \n",
+       "3    400.0  1.391704e+05  2.338557e+07  2.466136e+07    51087341    3040415   \n",
+       "4    262.0  1.167978e+05  1.368450e+07  1.515999e+07    42845642   14001153   \n",
+       "..     ...           ...           ...           ...         ...        ...   \n",
+       "56  2814.0  1.321032e+06  3.791029e+08  1.064302e+08   491523782    5990693   \n",
+       "57  5218.0  1.187022e+06  2.912481e+08  1.093286e+08   439084836   38508125   \n",
+       "58  6392.0  4.333934e+06  9.289621e+08  6.621559e+08  1650391999   59273999   \n",
+       "59  1565.1  2.736281e+06  6.337903e+08  2.960207e+08  1074256998  144445998   \n",
+       "60  8000.0  4.662582e+06  1.285631e+09  4.616758e+08  1912179417  164872413   \n",
+       "\n",
+       "    AvlBeds  Cluster  \n",
+       "0        15        0  \n",
+       "1        99        0  \n",
+       "2       107        0  \n",
+       "3        55        0  \n",
+       "4        42        0  \n",
+       "..      ...      ...  \n",
+       "56      530        1  \n",
+       "57      462        1  \n",
+       "58      445        1  \n",
+       "59      730        1  \n",
+       "60      909        1  \n",
+       "\n",
+       "[61 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "k = 3\n",
+    "kmeans = KMeans(n_clusters=k, random_state=1)\n",
+    "hospital_df['Cluster'] = kmeans.fit_predict(hospital_scaled)\n",
+    "hospital_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce897240-9ea5-440e-8462-7a3de8f03ae6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
