Create a confusion matrix for each of the three categorical variables and analyze

--- a/10_Instructor_Lab_Lannen.ipynb
+++ b/10_Instructor_Lab_Lannen.ipynb
@@ -1888,12 +1888,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "44b5a96c-d70b-492a-98e9-f3f9d62d2e6f",
+   "cell_type": "markdown",
+   "id": "e61db3f4-e6dc-49b7-8437-b85022e483bf",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Analysis\n",
+    "'TypeControl' appears to be the best grouping variable as it displays the clearest separation between clusters. This indicates that hospital funding type is more important in terms of understanding any of the other business metrics."
+   ]
   }
  ],
  "metadata": {
