--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -21,8 +21,470 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "60c10f37-00ff-4a2d-9742-b7faba341bfe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "from sklearn import tree\n",
+    "from sklearn import metrics\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "import graphviz\n",
+    "from six import StringIO\n",
+    "from IPython.display import Image, display\n",
+    "import pydotplus"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b305ca89-339f-4d16-b583-7974ff3db4d6",
+   "metadata": {},
+   "source": [
+    "## Set working directory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "c7fa35bf-5f01-4ca2-8e29-5d9e60d76898",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Users/markl1/Documents/Studies/Grad_School-MBA/Spring_2025/Python/week10labs/data'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.getcwd()\n",
+    "os.chdir('/Users/markl1/Documents/Studies/Grad_School-MBA/Spring_2025/Python/week10labs/data')\n",
+    "os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a9139cc-23f9-49ff-8e94-d7ff568602a9",
+   "metadata": {},
+   "source": [
+    "## Load Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "37274f35-0067-4196-a53e-8514bc5cfe31",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>HospitalID</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Zip</th>\n",
+       "      <th>Website</th>\n",
+       "      <th>TypeControl</th>\n",
+       "      <th>Teaching</th>\n",
+       "      <th>DonorType</th>\n",
+       "      <th>NoFTE</th>\n",
+       "      <th>NetPatRev</th>\n",
+       "      <th>InOperExp</th>\n",
+       "      <th>...</th>\n",
+       "      <th>AvlBeds</th>\n",
+       "      <th>Work_ID</th>\n",
+       "      <th>LastName</th>\n",
+       "      <th>FirstName</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>PositionID</th>\n",
+       "      <th>PositionTitle</th>\n",
+       "      <th>Compensation</th>\n",
+       "      <th>MaxTerm</th>\n",
+       "      <th>StartDate</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>45740</td>\n",
+       "      <td>Mammoth Hospital</td>\n",
+       "      <td>93546-0660</td>\n",
+       "      <td>www.mammothhospital.com</td>\n",
+       "      <td>District</td>\n",
+       "      <td>Small/Rural</td>\n",
+       "      <td>Charity</td>\n",
+       "      <td>327.0</td>\n",
+       "      <td>1.355202e+05</td>\n",
+       "      <td>2.052343e+07</td>\n",
+       "      <td>...</td>\n",
+       "      <td>15</td>\n",
+       "      <td>721586</td>\n",
+       "      <td>Web</td>\n",
+       "      <td>David</td>\n",
+       "      <td>M</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Safety Inspection Member</td>\n",
+       "      <td>23987</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1/1/2012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>12145</td>\n",
+       "      <td>Victor Valley Community Hospital</td>\n",
+       "      <td>92392</td>\n",
+       "      <td>www.vvch.org</td>\n",
+       "      <td>Non Profit</td>\n",
+       "      <td>Small/Rural</td>\n",
+       "      <td>Charity</td>\n",
+       "      <td>345.0</td>\n",
+       "      <td>1.361567e+05</td>\n",
+       "      <td>3.344754e+07</td>\n",
+       "      <td>...</td>\n",
+       "      <td>99</td>\n",
+       "      <td>756481</td>\n",
+       "      <td>Rodriguez</td>\n",
+       "      <td>Jose</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Regional Representative</td>\n",
+       "      <td>46978</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1/1/2009</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>25667</td>\n",
+       "      <td>Pioneers Memorial Hospital</td>\n",
+       "      <td>92227</td>\n",
+       "      <td>www.pmhd.org</td>\n",
+       "      <td>District</td>\n",
+       "      <td>Small/Rural</td>\n",
+       "      <td>Charity</td>\n",
+       "      <td>601.2</td>\n",
+       "      <td>1.970943e+05</td>\n",
+       "      <td>3.725418e+07</td>\n",
+       "      <td>...</td>\n",
+       "      <td>107</td>\n",
+       "      <td>926378</td>\n",
+       "      <td>Adamson</td>\n",
+       "      <td>David</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Regional Representative</td>\n",
+       "      <td>46978</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1/1/2012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>46996</td>\n",
+       "      <td>Ridgecrest Regional Hospital</td>\n",
+       "      <td>93555</td>\n",
+       "      <td>www.rrh.org</td>\n",
+       "      <td>Non Profit</td>\n",
+       "      <td>Small/Rural</td>\n",
+       "      <td>Charity</td>\n",
+       "      <td>400.0</td>\n",
+       "      <td>1.391704e+05</td>\n",
+       "      <td>2.338557e+07</td>\n",
+       "      <td>...</td>\n",
+       "      <td>55</td>\n",
+       "      <td>856720</td>\n",
+       "      <td>Roberts</td>\n",
+       "      <td>Melissa</td>\n",
+       "      <td>F</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Safety Inspection Member</td>\n",
+       "      <td>23987</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1/1/2009</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>37393</td>\n",
+       "      <td>Barstow Community Hospital</td>\n",
+       "      <td>92311</td>\n",
+       "      <td>www.barstowhospital.com</td>\n",
+       "      <td>Investor</td>\n",
+       "      <td>Small/Rural</td>\n",
+       "      <td>Charity</td>\n",
+       "      <td>262.0</td>\n",
+       "      <td>1.167978e+05</td>\n",
+       "      <td>1.368450e+07</td>\n",
+       "      <td>...</td>\n",
+       "      <td>42</td>\n",
+       "      <td>909709</td>\n",
+       "      <td>Iwata</td>\n",
+       "      <td>Akira</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Regional Representative</td>\n",
+       "      <td>46978</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1/1/2011</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>56</th>\n",
+       "      <td>32930</td>\n",
+       "      <td>Scripps Mercy Hospital</td>\n",
+       "      <td>92103</td>\n",
+       "      <td>www.scrippshealth.org</td>\n",
+       "      <td>Non Profit</td>\n",
+       "      <td>Teaching</td>\n",
+       "      <td>Alumni</td>\n",
+       "      <td>2814.0</td>\n",
+       "      <td>1.321032e+06</td>\n",
+       "      <td>3.791029e+08</td>\n",
+       "      <td>...</td>\n",
+       "      <td>530</td>\n",
+       "      <td>411280</td>\n",
+       "      <td>Manin</td>\n",
+       "      <td>Emily</td>\n",
+       "      <td>F</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Regional Representative</td>\n",
+       "      <td>46978</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1/1/2011</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>57</th>\n",
+       "      <td>31032</td>\n",
+       "      <td>Long Beach Memorial &amp; Miller Children's Hospital</td>\n",
+       "      <td>90806</td>\n",
+       "      <td>www.memorialcare.org</td>\n",
+       "      <td>Non Profit</td>\n",
+       "      <td>Teaching</td>\n",
+       "      <td>Alumni</td>\n",
+       "      <td>5218.0</td>\n",
+       "      <td>1.187022e+06</td>\n",
+       "      <td>2.912481e+08</td>\n",
+       "      <td>...</td>\n",
+       "      <td>462</td>\n",
+       "      <td>310431</td>\n",
+       "      <td>Dong</td>\n",
+       "      <td>HongWei</td>\n",
+       "      <td>F</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Safety Inspection Member</td>\n",
+       "      <td>23987</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1/1/2012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>58</th>\n",
+       "      <td>22460</td>\n",
+       "      <td>Stanford Hospital &amp; Clinics</td>\n",
+       "      <td>94305</td>\n",
+       "      <td>stanfordhospital.org</td>\n",
+       "      <td>Non Profit</td>\n",
+       "      <td>Teaching</td>\n",
+       "      <td>Alumni</td>\n",
+       "      <td>6392.0</td>\n",
+       "      <td>4.333934e+06</td>\n",
+       "      <td>9.289621e+08</td>\n",
+       "      <td>...</td>\n",
+       "      <td>445</td>\n",
+       "      <td>380668</td>\n",
+       "      <td>Smith</td>\n",
+       "      <td>Mary</td>\n",
+       "      <td>F</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Safety Inspection Member</td>\n",
+       "      <td>23987</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1/1/2012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>59</th>\n",
+       "      <td>33192</td>\n",
+       "      <td>California Pacific Medical Center - Pacific Ca...</td>\n",
+       "      <td>94115</td>\n",
+       "      <td>www.cpmc.org</td>\n",
+       "      <td>Non Profit</td>\n",
+       "      <td>Teaching</td>\n",
+       "      <td>Alumni</td>\n",
+       "      <td>1565.1</td>\n",
+       "      <td>2.736281e+06</td>\n",
+       "      <td>6.337903e+08</td>\n",
+       "      <td>...</td>\n",
+       "      <td>730</td>\n",
+       "      <td>308150</td>\n",
+       "      <td>Fourier</td>\n",
+       "      <td>Craig</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Regional Representative</td>\n",
+       "      <td>46978</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1/1/2011</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>60</th>\n",
+       "      <td>38900</td>\n",
+       "      <td>Cedars-Sinai Medical Center</td>\n",
+       "      <td>90048</td>\n",
+       "      <td>www.csmc.edu</td>\n",
+       "      <td>Non Profit</td>\n",
+       "      <td>Teaching</td>\n",
+       "      <td>Alumni</td>\n",
+       "      <td>8000.0</td>\n",
+       "      <td>4.662582e+06</td>\n",
+       "      <td>1.285631e+09</td>\n",
+       "      <td>...</td>\n",
+       "      <td>909</td>\n",
+       "      <td>664583</td>\n",
+       "      <td>Paanua</td>\n",
+       "      <td>Kaaluai</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Regional Representative</td>\n",
+       "      <td>46978</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1/1/2011</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>61 rows × 23 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    HospitalID                                               Name         Zip  \\\n",
+       "0        45740                                   Mammoth Hospital  93546-0660   \n",
+       "1        12145                   Victor Valley Community Hospital       92392   \n",
+       "2        25667                         Pioneers Memorial Hospital       92227   \n",
+       "3        46996                       Ridgecrest Regional Hospital       93555   \n",
+       "4        37393                         Barstow Community Hospital       92311   \n",
+       "..         ...                                                ...         ...   \n",
+       "56       32930                             Scripps Mercy Hospital       92103   \n",
+       "57       31032   Long Beach Memorial & Miller Children's Hospital       90806   \n",
+       "58       22460                        Stanford Hospital & Clinics       94305   \n",
+       "59       33192  California Pacific Medical Center - Pacific Ca...       94115   \n",
+       "60       38900                        Cedars-Sinai Medical Center       90048   \n",
+       "\n",
+       "                    Website TypeControl     Teaching DonorType   NoFTE  \\\n",
+       "0   www.mammothhospital.com    District  Small/Rural   Charity   327.0   \n",
+       "1              www.vvch.org  Non Profit  Small/Rural   Charity   345.0   \n",
+       "2              www.pmhd.org    District  Small/Rural   Charity   601.2   \n",
+       "3               www.rrh.org  Non Profit  Small/Rural   Charity   400.0   \n",
+       "4   www.barstowhospital.com    Investor  Small/Rural   Charity   262.0   \n",
+       "..                      ...         ...          ...       ...     ...   \n",
+       "56    www.scrippshealth.org  Non Profit     Teaching    Alumni  2814.0   \n",
+       "57     www.memorialcare.org  Non Profit     Teaching    Alumni  5218.0   \n",
+       "58     stanfordhospital.org  Non Profit     Teaching    Alumni  6392.0   \n",
+       "59             www.cpmc.org  Non Profit     Teaching    Alumni  1565.1   \n",
+       "60             www.csmc.edu  Non Profit     Teaching    Alumni  8000.0   \n",
+       "\n",
+       "       NetPatRev     InOperExp  ...  AvlBeds  Work_ID   LastName  FirstName  \\\n",
+       "0   1.355202e+05  2.052343e+07  ...       15   721586        Web      David   \n",
+       "1   1.361567e+05  3.344754e+07  ...       99   756481  Rodriguez       Jose   \n",
+       "2   1.970943e+05  3.725418e+07  ...      107   926378    Adamson      David   \n",
+       "3   1.391704e+05  2.338557e+07  ...       55   856720    Roberts    Melissa   \n",
+       "4   1.167978e+05  1.368450e+07  ...       42   909709      Iwata      Akira   \n",
+       "..           ...           ...  ...      ...      ...        ...        ...   \n",
+       "56  1.321032e+06  3.791029e+08  ...      530   411280      Manin      Emily   \n",
+       "57  1.187022e+06  2.912481e+08  ...      462   310431       Dong    HongWei   \n",
+       "58  4.333934e+06  9.289621e+08  ...      445   380668      Smith       Mary   \n",
+       "59  2.736281e+06  6.337903e+08  ...      730   308150    Fourier      Craig   \n",
+       "60  4.662582e+06  1.285631e+09  ...      909   664583     Paanua    Kaaluai   \n",
+       "\n",
+       "    Gender PositionID             PositionTitle Compensation  MaxTerm  \\\n",
+       "0        M          4  Safety Inspection Member        23987        2   \n",
+       "1        M          1   Regional Representative        46978        4   \n",
+       "2        M          1   Regional Representative        46978        4   \n",
+       "3        F          4  Safety Inspection Member        23987        2   \n",
+       "4        M          1   Regional Representative        46978        4   \n",
+       "..     ...        ...                       ...          ...      ...   \n",
+       "56       F          1   Regional Representative        46978        4   \n",
+       "57       F          4  Safety Inspection Member        23987        2   \n",
+       "58       F          4  Safety Inspection Member        23987        2   \n",
+       "59       M          1   Regional Representative        46978        4   \n",
+       "60       M          1   Regional Representative        46978        4   \n",
+       "\n",
+       "   StartDate  \n",
+       "0   1/1/2012  \n",
+       "1   1/1/2009  \n",
+       "2   1/1/2012  \n",
+       "3   1/1/2009  \n",
+       "4   1/1/2011  \n",
+       "..       ...  \n",
+       "56  1/1/2011  \n",
+       "57  1/1/2012  \n",
+       "58  1/1/2012  \n",
+       "59  1/1/2011  \n",
+       "60  1/1/2011  \n",
+       "\n",
+       "[61 rows x 23 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hosp_df = pd.read_table(\"calihospital.txt\", sep = '\\t')\n",
+    "\n",
+    "hosp_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c56a2756-84ca-4dda-aed8-bb322fa308ee",
    "metadata": {},
    "outputs": [],
    "source": []
