begin loading data. still need to incorporate Teaching as it is non-numerical

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -482,9 +482,135 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b985733e-84ed-4d9d-99d5-48f80f513b3d",
+   "metadata": {},
+   "source": [
+    "## Determine Candidates for Predictor Variables\n",
+    "I have chosen 3, with at least one Categorical and one Numerical.\n",
+    "Teaching, NoFTE and AvlBeds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "dde7c773-6695-454d-a9f2-81e6b9723707",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 61 entries, 0 to 60\n",
+      "Data columns (total 23 columns):\n",
+      " #   Column         Non-Null Count  Dtype  \n",
+      "---  ------         --------------  -----  \n",
+      " 0   HospitalID     61 non-null     int64  \n",
+      " 1   Name           61 non-null     object \n",
+      " 2   Zip            61 non-null     object \n",
+      " 3   Website        61 non-null     object \n",
+      " 4   TypeControl    61 non-null     object \n",
+      " 5   Teaching       61 non-null     object \n",
+      " 6   DonorType      61 non-null     object \n",
+      " 7   NoFTE          61 non-null     float64\n",
+      " 8   NetPatRev      61 non-null     float64\n",
+      " 9   InOperExp      61 non-null     float64\n",
+      " 10  OutOperExp     61 non-null     float64\n",
+      " 11  OperRev        61 non-null     int64  \n",
+      " 12  OperInc        61 non-null     int64  \n",
+      " 13  AvlBeds        61 non-null     int64  \n",
+      " 14  Work_ID        61 non-null     int64  \n",
+      " 15  LastName       61 non-null     object \n",
+      " 16  FirstName      61 non-null     object \n",
+      " 17  Gender         61 non-null     object \n",
+      " 18  PositionID     61 non-null     int64  \n",
+      " 19  PositionTitle  61 non-null     object \n",
+      " 20  Compensation   61 non-null     int64  \n",
+      " 21  MaxTerm        61 non-null     int64  \n",
+      " 22  StartDate      61 non-null     object \n",
+      "dtypes: float64(4), int64(8), object(11)\n",
+      "memory usage: 11.1+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "hosp_df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "894ceead-e6d8-482b-bba6-d4002ce94cf5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>NoFTE</th>\n",
+       "      <th>AvlBeds</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>NoFTE</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.881333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AvlBeds</th>\n",
+       "      <td>0.881333</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            NoFTE   AvlBeds\n",
+       "NoFTE    1.000000  0.881333\n",
+       "AvlBeds  0.881333  1.000000"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numerical_df = (hosp_df\n",
+    "                .filter(['NoFTE','AvlBeds'])\n",
+    "          )\n",
+    "\n",
+    "# numerical_df = (hosp_df\n",
+    "#                 .filter(['NoFTE', 'NetPatRev', 'InOperExp', 'OutOperExp', 'OperRev', 'OperInc', 'AvlBeds'])\n",
+    "#           )\n",
+    "\n",
+    "numerical_df.corr()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c56a2756-84ca-4dda-aed8-bb322fa308ee",
+   "id": "62e1b524-7a4b-4de8-adc9-5921f6144a43",
    "metadata": {},
    "outputs": [],
    "source": []
