update name of Independent Lab

--- a/10_Independent_Lab_Lannen.ipynb
+++ b/10_Independent_Lab_Lannen.ipynb
@@ -5,7 +5,7 @@
    "id": "1d7406f8-ad48-4f0a-b3ed-28f728743faa",
    "metadata": {},
    "source": [
-    "# 10 Independent Lab\n",
+    "# Week 10 Independent Lab\n",
     "Author: Mark Lannen  \n",
     "Course: BGEN632 Grad. Intro. to Python  \n",
     "Term: Spring 2025"
