begin creating decision tree

--- a/10_Independent_Lab_Lannen.ipynb
+++ b/10_Independent_Lab_Lannen.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "60c10f37-00ff-4a2d-9742-b7faba341bfe",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "c7fa35bf-5f01-4ca2-8e29-5d9e60d76898",
    "metadata": {},
    "outputs": [
@@ -62,7 +62,7 @@
        "'/Users/markl1/Documents/Studies/Grad_School-MBA/Spring_2025/Python/week10labs/data'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "37274f35-0067-4196-a53e-8514bc5cfe31",
    "metadata": {},
    "outputs": [
@@ -470,7 +470,7 @@
        "[61 rows x 23 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "dde7c773-6695-454d-a9f2-81e6b9723707",
    "metadata": {},
    "outputs": [
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "894ceead-e6d8-482b-bba6-d4002ce94cf5",
    "metadata": {},
    "outputs": [
@@ -590,7 +590,7 @@
        "AvlBeds  0.881333  1.000000"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -600,17 +600,166 @@
     "                .filter(['NoFTE','AvlBeds'])\n",
     "          )\n",
     "\n",
-    "# numerical_df = (hosp_df\n",
-    "#                 .filter(['NoFTE', 'NetPatRev', 'InOperExp', 'OutOperExp', 'OperRev', 'OperInc', 'AvlBeds'])\n",
-    "#           )\n",
-    "\n",
     "numerical_df.corr()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "490b3e4f-1550-43f2-96ea-a1d23e398c1a",
+   "metadata": {},
+   "source": [
+    "## Create Decision Tree\n",
+    "Use NoFTE as Target Variable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "61b9adaa-1448-4524-b2d7-5630104d1dc9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>NoFTE</th>\n",
+       "      <th>AvlBeds</th>\n",
+       "      <th>Teaching_Teaching</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>327.0</td>\n",
+       "      <td>15</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>345.0</td>\n",
+       "      <td>99</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>601.2</td>\n",
+       "      <td>107</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>400.0</td>\n",
+       "      <td>55</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>262.0</td>\n",
+       "      <td>42</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>56</th>\n",
+       "      <td>2814.0</td>\n",
+       "      <td>530</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>57</th>\n",
+       "      <td>5218.0</td>\n",
+       "      <td>462</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>58</th>\n",
+       "      <td>6392.0</td>\n",
+       "      <td>445</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>59</th>\n",
+       "      <td>1565.1</td>\n",
+       "      <td>730</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>60</th>\n",
+       "      <td>8000.0</td>\n",
+       "      <td>909</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>61 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     NoFTE  AvlBeds  Teaching_Teaching\n",
+       "0    327.0       15              False\n",
+       "1    345.0       99              False\n",
+       "2    601.2      107              False\n",
+       "3    400.0       55              False\n",
+       "4    262.0       42              False\n",
+       "..     ...      ...                ...\n",
+       "56  2814.0      530               True\n",
+       "57  5218.0      462               True\n",
+       "58  6392.0      445               True\n",
+       "59  1565.1      730               True\n",
+       "60  8000.0      909               True\n",
+       "\n",
+       "[61 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Categorical Variable\n",
+    "\n",
+    "categorical_df = (hosp_df\n",
+    "                .filter(['Teaching'])\n",
+    "          )\n",
+    "\n",
+    "# categorical_df\n",
+    "\n",
+    "# Convert categorical variable into numerical/dummy variable\n",
+    "dummy = pd.get_dummies(categorical_df, drop_first=True)\n",
+    "# dummy\n",
+    "\n",
+    "# merge numerical and converted categorical variables\n",
+    "decision_tree_1 = pd.merge(numerical_df, dummy, left_index=True, right_index=True)\n",
+    "decision_tree_1"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62e1b524-7a4b-4de8-adc9-5921f6144a43",
+   "id": "aa0d1fa6-9ac6-478c-844c-8a274a085330",
    "metadata": {},
    "outputs": [],
    "source": []
