Use OperRev as Target Variable to create decision tree

--- a/10_Independent_Lab_Walkthrough.ipynb
+++ b/10_Independent_Lab_Walkthrough.ipynb
@@ -1251,7 +1251,7 @@
    "source": [
     "Don't forget to interpret your results! \n",
     "\n",
-    "##### Using `TypeControl` as a target variable, create a tree.\n",
+    "### Using `TypeControl` as a target variable, create a tree.\n",
     "\n",
     "Our target variable is a categorical data type, so we will use a classification tree."
    ]
