create regression tree using TypeControl as target variable

--- a/10_Independent_Lab_Walkthrough.ipynb
+++ b/10_Independent_Lab_Walkthrough.ipynb
@@ -733,9 +733,7 @@
     "\n",
     "## Create Decision Trees\n",
     "\n",
-    "##### Using `operating income` as a target variable, create a tree.\n",
-    "\n",
-    "Our target variable is a numerical continuous data type, so we will use a regression tree."
+    "### Use `operating income` as a target variable to create a tree."
    ]
   },
   {
